--- a/index.css
+++ b/index.css
@@ -139,7 +139,7 @@ main {
 
 .works-header {
   position: static;
-  color: #172b4d;
+  color: rgba(23, 43, 77, 1);
   font-size: 40px;
   font-style: normal;
   font-weight: bold;
@@ -152,7 +152,7 @@ main {
 .line {
   width: 6%;
   height: 9px;
-  background-color: #36b37f;
+  background-color: rgba(54, 179, 127, 1);
   display: inline-block;
   position: relative;
   margin: 2% 40%;
@@ -162,7 +162,7 @@ main {
 }
 
 .works {
-  background-color: #ffff;
+  background-color: rgba(255, 255, 255, 1);
   display: grid;
   grid-template-rows: auto auto auto auto auto auto;
   row-gap: 45px;
@@ -175,8 +175,8 @@ main {
 }
 
 .grid-item {
-  background-color: #ffff;
-  border: 2px solid #ffff;
+  background-color: rgba(255, 255, 255, 1);
+  border: 2px solid #e5e5e5;
   width: 90%;
   height: 90%;
   border-radius: 25px;
@@ -211,7 +211,7 @@ main {
   width: 80%;
   height: 8%;
   font-weight: 600;
-  color: #3a4a42;
+  color: rgb(58, 74, 66);
   margin: auto;
   text-align: center;
   justify-content: center;
@@ -239,7 +239,7 @@ ul {
   border-radius: 4px;
   margin-top: 13px;
   margin-bottom: 10px;
-  background: #ffff;
+  background: rgba(235, 240, 238, 1);
   padding-top: 2%;
   padding-right: 3%;
   padding-bottom: 2%;
@@ -302,6 +302,7 @@ ul {
   justify-content: center;
   color: #42526e;
   padding: 20px;
+  margin-bottom: 40px;
 }
 
 .about2 {
@@ -324,12 +325,12 @@ ul {
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
-  margin: 2rem auto  1rem;
+  margin: 2rem auto 1rem;
   text-align: center;
 }
 
 .flex-container {
-  background-color: #ffff;
+  background-color: rgba(255, 255, 255, 1);
   display: flex;
   flex-direction: column;
   column-gap: 45%;
@@ -337,8 +338,8 @@ ul {
 }
 
 .flex-box {
-  background-color: #ffff;
-  border: 2px solid #ffff;
+  background-color: rgba(235, 240, 238, 1);
+  border: 2px solid rgba(193, 199, 208, 1);
   width: 90%;
   height: 20rem;
   border-radius: 10px;
@@ -377,7 +378,7 @@ ul {
   font-size: 24px;
   line-height: 32px;
   text-align: center;
-  color: #344563;
+  color: rgba(52, 69, 99, 1);
   margin-bottom: 1rem;
 }
 
@@ -388,8 +389,8 @@ ul {
   font-size: 12px;
   flex-wrap: wrap;
   text-align: center;
-  color: #36b37e;
-  background-color: #d0d9d4;
+  color: #60c095;
+  background-color: #ffff;
   border-radius: 0.3rem;
   height: 1.5rem;
   width: 10%;
@@ -405,7 +406,7 @@ ul {
 }
 
 .contact {
-  background-color: #d0d9d4;
+  background-color: #ffff;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -443,7 +444,7 @@ input[type=text] {
 
 .form-container {
   border-radius: 5px;
-  background-color: #d0d9d4;
+  background-color: white;
   padding: 20px;
 }
 
@@ -460,7 +461,7 @@ input[type=email] {
 
 textarea {
   height: 200px;
-  border: 1px solid#60c095;
+  border: 1px solid #60c095;
   width: 90%;
   padding: 12px;
   border-radius: 4px;
@@ -511,33 +512,33 @@ p {
   font-size: 20px;
   line-height: 32px;
   text-align: center;
-  color: #42526e;
+  color: rgba(66, 82, 110, 1);
   margin-bottom: 30%;
 }
 
 a:link {
   text-decoration: none;
-  color: #42526e;
+  color: rgba(66, 82, 110, 1);
 }
 
 a:visited {
   text-decoration: none;
-  color: #42526e;
+  color: rgba(66, 82, 110, 1);
 }
 
 a:hover {
   text-decoration: underline;
-  color: #42526e;
+  color: rgba(66, 82, 110, 1);
 }
 
 .line2 {
   width: 20%;
   height: 9px;
-  background-color: #131414;
+  background-color: #171a17;
   display: inline-block;
   position: relative;
   margin: 2% 40%;
   margin-bottom: 12px;
   margin-top: 2px;
-  border-radius: 2px;
+  border-radius: 4px;
 }
