--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@ main {
   line-height: 28px;
   margin-top: 5%;
   width: 90%;
+  color: #172b4d;
 }
 
 .intro-section {
@@ -135,6 +136,16 @@ main {
 .githubsize {
   width: 25px;
   height: 25px;
+}
+
+.vector-img {
+  margin-top: 10%;
+  cursor: pointer;
+  width: 7%;
+}
+
+.vector-img:hover {
+  color: #45a049;
 }
 
 .works-header {
@@ -267,9 +278,9 @@ ul {
   margin-bottom: 7%;
   border-radius: 4px;
   padding: 2%;
-  background: rgba(54, 179, 127, 1);
+  background: #36b37f;
   align-items: center;
-  color: white;
+  color: #ffff;
 }
 
 .about {
@@ -281,7 +292,7 @@ ul {
 }
 
 .about-header {
-  color: rgba(23, 43, 77, 1);
+  color: #172b4d;
   font-size: 40px;
   margin-top: 120px;
   margin-bottom: 20px;
@@ -300,8 +311,9 @@ ul {
   line-height: 32px;
   text-align: center;
   justify-content: center;
-  color: #42526e;
+  color: #172b4d;
   padding: 20px;
+  margin-bottom: 40px;
 }
 
 .about2 {
@@ -318,13 +330,13 @@ ul {
   height: 2rem;
   padding: 1rem 1rem;
   font-size: 1.3rem;
-  color: white;
-  background-color: rgba(54, 179, 127, 1);
+  color: #ffff;
+  background-color: #36b37f;
   border: none;
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
-  margin: 2rem auto  1rem;
+  margin: 2rem auto 1rem;
   text-align: center;
 }
 
@@ -357,7 +369,7 @@ ul {
   width: 5rem;
   height: 5rem;
   border-radius: 20rem;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #ffff;
   align-items: center;
 }
 
@@ -388,8 +400,8 @@ ul {
   font-size: 12px;
   flex-wrap: wrap;
   text-align: center;
-  color: rgba(54, 179, 126, 1);
-  background-color: rgba(255, 255, 255, 1);
+  color: #60c095;
+  background-color: #ffff;
   border-radius: 0.3rem;
   height: 1.5rem;
   width: 10%;
@@ -402,4 +414,142 @@ ul {
   justify-content: space-around;
   margin-left: 3%;
   margin-bottom: 7%;
+}
+
+.contact {
+  background-color: #ffff;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.contact-text {
+  width: 60%;
+  height: 363px;
+  font-style: normal;
+  text-align: center;
+  justify-content: center;
+  padding: 20px;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  color: #172b4d;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 24px auto;
+  margin-bottom: 30px;
+}
+
+input[type=text] {
+  width: 90%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 18px;
+  margin-bottom: 12px;
+  resize: vertical;
+}
+
+.form-container {
+  border-radius: 5px;
+  background-color: white;
+  padding: 20px;
+}
+
+input[type=email] {
+  width: 90%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 18px;
+  margin-bottom: 12px;
+  resize: vertical;
+}
+
+textarea {
+  height: 200px;
+  border: 1px solid #60c095;
+  width: 90%;
+  padding: 12px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 18px;
+  margin-bottom: 12px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background: #36b37f;
+  width: 129px;
+  height: 48px;
+  margin: auto;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.contact-img {
+  position: static;
+  background: url("./image/contact.svg");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-size: 4rem;
+  padding: 8% 6%;
+}
+
+.socials-lists-item-after {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50%;
+  margin: auto;
+  height: 100%;
+}
+
+p {
+  margin-top: 20px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: rgba(66, 82, 110, 1);
+  margin-bottom: 30%;
+}
+
+a:link {
+  text-decoration: none;
+  color: rgba(66, 82, 110, 1);
+}
+
+a:visited {
+  text-decoration: none;
+  color: rgba(66, 82, 110, 1);
+}
+
+a:hover {
+  text-decoration: underline;
+  color: rgba(66, 82, 110, 1);
+}
+
+.line2 {
+  width: 20%;
+  height: 9px;
+  background-color: #171a17;
+  display: inline-block;
+  position: relative;
+  margin: 2% 40%;
+  margin-bottom: 12px;
+  margin-top: 2px;
+  border-radius: 4px;
 }
