--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+/*This imports the `utility.css` file */
+@import url('./utility.css');
+
 * {
   margin: 0;
   padding: 0;
@@ -26,23 +29,24 @@
  --secondary-tags-toggle: rgba(193, 199, 208, 1);
  --attri-title-color: rgba(52, 69, 99, 1);
  --attri-btn-text: #60c095;
+ --modal-tag: #344563;
+ --modal-tag-bg: #ebecf0;
+ --item-border-color: #e5e5e5;
+ --line-toggle: rgb(18, 99, 238);
 }
 
 .navbar-container {
   height: 50px;
-  display: block;
   font-size: 1.2rem;
   background-color: var(--neutral-nav-bg);
 }
 
 .nav-menu-wrapper {
-  height: 110%;
-  position: fixed;
+  height: 110%; 
   bottom: 0;
   top: 50px;
   background-color: var(--neutral-menu-color);
   width: 100%;
-  display: none;
 }
 
 #welcome {
@@ -52,8 +56,6 @@
 }
 
 .nav-menu {
-  display: block;
-  position: absolute;
   height: 80%;
   width: 100%;
   background-color: var(--neutral-nav-bg);
@@ -67,8 +69,6 @@
   margin: 5px auto;
   transition: all 0.3s ease;
   background: var(--neutral-toggle);
-  cursor: pointer;
-  display: block;
 }
 
 .navbar-item {
@@ -83,7 +83,6 @@
   text-decoration: none;
   right: 0%;
   font-size: 20px;
-  display: table;
   color: var(--neutral-text);
 }
 
@@ -93,14 +92,12 @@
 }
 
 #mobile-menu {
-  position: absolute;
   top: -1%;
   right: 5%;
   transform: translate(5%, 20%);
 }
 
 .navbar-container.is-active {
-  position: fixed;
   width: 100%;
   z-index: 1;
 }
@@ -117,12 +114,7 @@
   transform: translateY(-8px) rotate(-45deg);
 }
 
-.navbar-container.is-active .nav-menu-wrapper {
-  display: block;
-}
-
 main {
-  display: block;
   text-align: center;
   background: url('./image/header-mobile.svg');
   background-position: center top;
@@ -183,7 +175,6 @@ main {
 
 .socials-lists-item {
   display: flex;
-  align-items: center;
   width: 50%;
   margin-top: 1%;
   height: 100%;
@@ -249,8 +240,7 @@ main {
   color: var(--vector-toggle-color);
 }
 
-.works-header {
-  position: static;
+.works-header { 
   color: var(--secondary-work-bg);
   font-size: 40px;
   font-style: normal;
@@ -274,7 +264,6 @@ main {
 
 .works {
   background-color: var(--secondary-about-bg);
-  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   flex-direction: column;
@@ -288,7 +277,6 @@ main {
 }
 
 .grid-item {
-  display: inline-block;
   background-color: var(--secondary-about-bg);
   border: 3px solid #e5e5e5;
   height: 80%;
@@ -314,13 +302,11 @@ main {
 }
 
 .card-img {
-  display: block;
   width: 500px;
   height: 200px;
 }
 
 .card-header {
-  display: block;
   font-size: 140%;
   width: 70%;
   height: 8%;
@@ -334,7 +320,6 @@ main {
 }
 
 .card-content {
-  display: flex;
   flex-wrap: wrap;
   align-content: center;
   justify-content: space-between;
@@ -362,7 +347,6 @@ ul {
 }
 
 .seeprojects {
-  display: block;
   position: relative;
   cursor: pointer;
   text-decoration: none;
@@ -416,7 +400,6 @@ ul {
 }
 
 .about-text {
-  position: static;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -439,7 +422,6 @@ ul {
 }
 
 .about-btn {
-  display: block;
   width: 10rem;
   height: 2rem;
   padding: 1rem 1rem;
@@ -458,9 +440,6 @@ ul {
 
 .about-container  {
   background-color: var(--secondary-about-bg);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -475,12 +454,10 @@ ul {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin-left: 4%;
-  margin-top: 3%;
+  margin:3% 4%;
 }
 
 .attribute-ellip {
-  position: static;
   margin: 2em auto;
   width: 5rem;
   height: 5rem;
@@ -513,12 +490,8 @@ ul {
 }
 
 .attribute-tags {
-  display: flex;
   align-items: center;
-  flex-direction: row;
   font-size: 12px;
-  flex-wrap: wrap;
-  position: relative;
   color: #60c095;
   background-color: var(--neutral-btn-text);
   border-radius: 0.3rem;
@@ -541,10 +514,6 @@ ul {
 
 .contact {
   background-color: var(--neutral-btn-text);
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-around;
 }
 
 .contact-text {
@@ -598,7 +567,7 @@ textarea {
   border-radius: 4px;
   box-sizing: border-box;
   margin-top: 18px;
-  margin-bottom: 12px;
+  margin:18px 0 0 12px;
 }
 
 input[type='submit'] {
@@ -621,11 +590,10 @@ textarea:hover {
 }
 
 input[type='submit']:hover {
-  background-color: #45a049;
+  background-color: var(--vector-toggle-color);
 }
 
 .socials-lists-item-after {
-  display: flex;
   align-items: center;
   width: 70%;
 }
@@ -680,13 +648,8 @@ a:hover {
   top: 0;
   bottom: 0;
   left: 0;
-  position: fixed;
   z-index: 99;
   transition: all 0.1s ease;
-}
-
-.hidden {
-  display: none;
 }
 
 .box-container {
@@ -708,8 +671,7 @@ a:hover {
 
 .modal-project-title {
   color: var(--summary-text-color);
-  margin-left: 5%;
-  margin-top: -15px;
+  margin-top: -15px 5% 0 0;
   line-height: 35px;
   height: 82px;
   font-weight: 700;
@@ -725,20 +687,9 @@ a:hover {
   padding: 1%;
   border-radius: 3px;
   filter: contrast(150%);
-  display: none;
-}
-
-.modal-cancel-icon {
-  display: none;
-}
-
-.modal-cancel-container.hidden {
-  display: none;
 }
 
 .modal-cancel-mobile-icon {
-  display: block;
-  position: absolute;
   top: 10%;
   right: 11%;
   cursor: pointer;
@@ -750,13 +701,12 @@ a:hover {
   padding: 1%;
   border-radius: 3px;
   filter: contrast(150%);
-  display: block;
 }
 
 .modal-See-Source-btm {
-  background: #36b37f;
+  background: var(--secondary-btn-bg);
   border-radius: 5px;
-  color: white;
+  color: var(--neutral-text);
   padding: 12px 12px;
   text-align: center;
   text-decoration: none;
@@ -767,9 +717,9 @@ a:hover {
 }
 
 .modal-See-Live-btm {
-  background: #36b37f;
+  background: var(--secondary-btn-bg);
   border-radius: 5px;
-  color: white;
+  color: var(--neutral-text);
   padding: 12px 12px;
   text-align: center;
   text-decoration: none;
@@ -789,11 +739,6 @@ a:hover {
   width: 15px;
 }
 
-.modal-content-button {
-  display: flex;
-  flex-direction: row;
-}
-
 .modal-content-next-button {
   margin-left: 20%;
   cursor: pointer;
@@ -804,10 +749,7 @@ a:hover {
   cursor: pointer;
 }
 .modal-attri-desktop-content {
-  display: flex;
   justify-content: left;
-  flex-direction: row;
-  flex-wrap: wrap;
   list-style-type: none;
 }
 
@@ -816,9 +758,9 @@ a:hover {
 }
 
 .modal-desktop-tags {
-  background-color: #ebecf0;
+  background-color: var(--modal-tag-bg);
   border-radius: 7px;
-  color: #344563;
+  color: var(--modal-tag);
   text-align: center;
   text-decoration: none;
   font-size: 12px;
@@ -838,21 +780,20 @@ a:hover {
   width: 90%;
   line-height: 30px;
   font-size: 20px;
-  color: #344563;
+  color: var(--modal-tag);
 }
 
 .modal-btn {
-  color: rgb(255, 255, 255);
+  color: var(--neutral-btn-text);
   text-decoration: none;
 }
 
 .modal-mobile-content {
-  background-color: #ebecf0;
+  background-color: var(--modal-tag-bg);
   border-radius: 7px;
-  color: #344563;
+  color:  var(--modal-tag);
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 12px;
   margin: 10px 12px;
   cursor: pointer;
@@ -862,20 +803,15 @@ a:hover {
 
 @media only screen and (min-width: 1100px) {
   .navbar.container {
-    position: fixed;
     width: 100%;
     z-index: 1;
-  }
-
-  .mobile-menu-bar {
-    display: none;
   }
 
   .nav-menu-wrapper {
     position: static;
     display: inline-block;
     width: 70%;
-    background-color: #fff;
+    background-color: var(--neutral-text);
     text-align: center;
   }
 
@@ -887,8 +823,7 @@ a:hover {
   }
 
   .works {
-    background-color: rgba(255, 255, 255, 1);
-    display: grid;
+    background-color: var(--secondary-about-bg);
     row-gap: 50px;
     grid-template-columns: auto auto auto;
     margin-left: 5%;
@@ -896,21 +831,13 @@ a:hover {
   }
 
   .nav-menu {
-    display: inline-flex;
-    position: absolute;
     width: auto;
     height: 1px;
   }
 
   .nav-menu.active {
-    position: absolute;
-    display: inline-flex;
     width: auto;
     height: 1px;
-  }
-
-  .menu-toggle .bar {
-    display: none;
   }
 
   .navbar-item {
@@ -922,18 +849,17 @@ a:hover {
     text-align: center;
     width: 100%;
     font-size: 20px;
-    color: #fff;
+    color: var(--neutral-text);
   }
 
   .nav-links:hover {
-    color: #3b6645;
+    color: var(--navlink-toggle-c0lor);
     transition: all 0.3s ease;
   }
 
   .grid-item {
-    display: inline-block;
-    background-color: rgba(255, 255, 255, 1);
-    border: 3px solid #e5e5e5;
+    background-color: var(--secondary-about-bg);
+    border: 3px solid var(--item-border-color);
     height: 95%;
     width: 300px;
     gap: 5%;
@@ -949,8 +875,6 @@ a:hover {
   }
 
   .card-content {
-    display: flex;
-    flex-wrap: wrap;
     align-content: center;
     justify-content: space-between;
     align-items: center;
@@ -962,24 +886,20 @@ a:hover {
     border-radius: 4px;
     margin-top: 10px;
     margin-bottom: 5px;
-    background: rgba(235, 240, 238, 1);
+    background: var(--secondary-tags-bg);
     padding: 2%;
     font-size: 12px;
     font-style: normal;
     font-weight: 600;
     letter-spacing: 0.03em;
-    color: black;
+    color: var(--neutral-toggle);
   }
 
   .seeprojects {
-    display: block;
-    position: relative;
     cursor: pointer;
     text-decoration: none;
     text-align: center;
     border: 0;
-    color: rgb(255, 255, 255);
-    background: #36b37f;
     border-radius: 4px;
     padding: 3%;
     margin: -20px 35%;
@@ -1011,14 +931,11 @@ a:hover {
   }
 
   .desktop-images {
-    display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-around;
   }
 
   .desktop1 {
-    position: relative;
     background: url('./image/desktop1.svg');
     background-repeat: no-repeat;
     background-position: right;
@@ -1052,7 +969,6 @@ a:hover {
   .line3 {
     width: 100%;
     height: 2px;
-    background-color: grey;
     margin-top: 40%;
     border-radius: 2px;
     transition: 2s;
@@ -1060,7 +976,7 @@ a:hover {
   }
 
   .line3:hover {
-    background-color: rgb(18, 99, 238);
+    background-color: var(--line-toggle);
   }
 
   .socials-list-after {
@@ -1115,18 +1031,6 @@ a:hover {
     width: 34%;
   }
 
-  .line {
-    display: none;
-  }
-
-  .text {
-    display: none;
-  }
-
-  .line2 {
-    display: none;
-  }
-
   .modal-container {
     border-radius: 10px;
     top: 0;
@@ -1135,15 +1039,9 @@ a:hover {
     width: 100%;
     margin-bottom: -3%;
     height: 10%;
-    position: fixed;
-  }
-
-  .modal-cancel-mobile-icon {
-    display: none;
   }
 
   .modal-cancel-icon {
-    display: block;
     margin-left: 90%;
     padding: 5px 5px;
     margin-bottom: -3px;
@@ -1151,17 +1049,11 @@ a:hover {
   }
 
   .box-container {
-    background-color: #fff;
     border-radius: 10px;
     height: 1000%;
   }
 
-  .modal-mobile-image {
-    display: none;
-  }
-
   .modal-desktop-image {
-    display: block;
     width: 91%;
     height: 310px;
     margin-top: 2%;
@@ -1171,12 +1063,11 @@ a:hover {
   }
 
   .modal-heading {
-    display: flex;
     margin-top: -10px;
   }
 
   .modal-project-title {
-    color: #172b4d;
+    color: var(--work-title-text-color);
     margin-left: 5%;
     line-height: 40px;
     height: 82px;
@@ -1193,7 +1084,6 @@ a:hover {
     padding: 1%;
     border-radius: 3px;
     filter: contrast(150%);
-    display: block;
   }
 
   .modal-content-btn-btm {
@@ -1202,30 +1092,27 @@ a:hover {
     padding: 1%;
     border-radius: 3px;
     filter: contrast(150%);
-    display: none;
   }
 
   .modal-See-Live-Top {
-    background: #36b37f;
+    background: var(--secondary-btn-bg);
     border-radius: 5px;
-    color: white;
+    color: var(--neutral-text);
     padding: 12px 12px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 12px;
     margin: 10px 10px;
     cursor: pointer;
   }
 
   .modal-See-Source-Top {
-    background: #36b37f;
+    background: var(--secondary-btn-bg);
     border-radius: 5px;
-    color: white;
+    color: var(--neutral-text);
     padding: 12px 12px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 12px;
     margin: 11px 11px;
     cursor: pointer;
@@ -1242,7 +1129,6 @@ a:hover {
   }
 
   .modal-attri-desktop-content {
-    display: flex;
     justify-content: left;
     flex-direction: row;
     flex-wrap: wrap;
@@ -1250,9 +1136,7 @@ a:hover {
   }
 
   .modal-desktop-tags {
-    background-color: #ebecf0;
     border-radius: 7px;
-    color: #344563;
     text-align: center;
     text-decoration: none;
     font-size: 12px;
@@ -1262,10 +1146,6 @@ a:hover {
     margin-left: 5%;
     padding: 8px 12px;
     display: block;
-  }
-
-  .modal-mobile-tags {
-    display: none;
   }
 
   .modal-contrast {
@@ -1281,11 +1161,7 @@ a:hover {
   }
 
   .modal-btn {
-    color: rgb(255, 255, 255);
+    color: var(--neutral-btn-text);
     text-decoration: none;
-  }
-
-  .modal-mobile-content {
-    display: none;
   }
 }
